--- a/ControlWidget.ui
+++ b/ControlWidget.ui
@@ -133,11 +133,14 @@
      </item>
      <item row="0" column="1">
       <widget class="QDoubleSpinBox" name="lboardSBox">
+       <property name="decimals">
+        <number>5</number>
+       </property>
        <property name="maximum">
         <double>1.000000000000000</double>
        </property>
        <property name="singleStep">
-        <double>0.010000000000000</double>
+        <double>0.001000000000000</double>
        </property>
       </widget>
      </item>
@@ -150,11 +153,14 @@
      </item>
      <item row="1" column="1">
       <widget class="QDoubleSpinBox" name="rboardSBox">
+       <property name="decimals">
+        <number>5</number>
+       </property>
        <property name="maximum">
         <double>1.000000000000000</double>
        </property>
        <property name="singleStep">
-        <double>0.010000000000000</double>
+        <double>0.001000000000000</double>
        </property>
       </widget>
      </item>
