--- a/ControlWidget.ui
+++ b/ControlWidget.ui
@@ -133,14 +133,20 @@
      </item>
      <item row="0" column="1">
       <widget class="QDoubleSpinBox" name="lboardSBox">
+       <property name="correctionMode">
+        <enum>QAbstractSpinBox::CorrectToNearestValue</enum>
+       </property>
+       <property name="keyboardTracking">
+        <bool>false</bool>
+       </property>
        <property name="decimals">
-        <number>5</number>
+        <number>2</number>
        </property>
        <property name="maximum">
         <double>1.000000000000000</double>
        </property>
        <property name="singleStep">
-        <double>0.001000000000000</double>
+        <double>0.010000000000000</double>
        </property>
       </widget>
      </item>
@@ -153,14 +159,20 @@
      </item>
      <item row="1" column="1">
       <widget class="QDoubleSpinBox" name="rboardSBox">
+       <property name="correctionMode">
+        <enum>QAbstractSpinBox::CorrectToNearestValue</enum>
+       </property>
+       <property name="keyboardTracking">
+        <bool>false</bool>
+       </property>
        <property name="decimals">
-        <number>5</number>
+        <number>2</number>
        </property>
        <property name="maximum">
         <double>1.000000000000000</double>
        </property>
        <property name="singleStep">
-        <double>0.001000000000000</double>
+        <double>0.010000000000000</double>
        </property>
       </widget>
      </item>
