--- a/MainWindow_New.ui
+++ b/MainWindow_New.ui
@@ -106,6 +106,11 @@
          <layout class="QHBoxLayout" name="horizontalLayout_3">
           <item>
            <widget class="QLabel" name="frq_x">
+            <property name="font">
+             <font>
+              <pointsize>18</pointsize>
+             </font>
+            </property>
             <property name="text">
              <string>TextLabel</string>
             </property>
@@ -184,7 +189,7 @@
      <x>0</x>
      <y>0</y>
      <width>687</width>
-     <height>22</height>
+     <height>30</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp">
