--- a/MainWindow_New.ui
+++ b/MainWindow_New.ui
@@ -118,6 +118,11 @@
           </item>
           <item>
            <widget class="QLabel" name="frq_z">
+            <property name="font">
+             <font>
+              <pointsize>18</pointsize>
+             </font>
+            </property>
             <property name="text">
              <string>TextLabel</string>
             </property>
