--- a/MainWindow_New.ui
+++ b/MainWindow_New.ui
@@ -194,7 +194,7 @@
      <x>0</x>
      <y>0</y>
      <width>687</width>
-     <height>30</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp">
@@ -202,7 +202,13 @@
      <string/>
     </property>
    </widget>
+   <widget class="QMenu" name="menuAAA">
+    <property name="title">
+     <string> </string>
+    </property>
+   </widget>
    <addaction name="menuHelp"/>
+   <addaction name="menuAAA"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
