--- a/ControlWidget.ui
+++ b/ControlWidget.ui
@@ -104,7 +104,7 @@
        <item row="0" column="0">
         <widget class="QLabel" name="lb_label">
          <property name="text">
-          <string>Left border</string>
+          <string>Left</string>
          </property>
         </widget>
        </item>
@@ -130,7 +130,7 @@
        <item row="1" column="0">
         <widget class="QLabel" name="rb_label">
          <property name="text">
-          <string>Right border</string>
+          <string>Right</string>
          </property>
         </widget>
        </item>
