--- a/StatusWidget.ui
+++ b/StatusWidget.ui
@@ -43,6 +43,9 @@
          <pointsize>12</pointsize>
         </font>
        </property>
+       <property name="autoFillBackground">
+        <bool>false</bool>
+       </property>
        <property name="text">
         <string/>
        </property>
@@ -54,6 +57,9 @@
         <font>
          <pointsize>12</pointsize>
         </font>
+       </property>
+       <property name="autoFillBackground">
+        <bool>false</bool>
        </property>
        <property name="text">
         <string/>
