--- a/FreqMeasure/Modules/MainWindow/MainWindow.ui
+++ b/FreqMeasure/Modules/MainWindow/MainWindow.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>612</width>
-    <height>710</height>
+    <width>600</width>
+    <height>662</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -383,6 +383,22 @@
        </widget>
       </item>
       <item>
+       <widget class="QPushButton" name="waveletbtn">
+        <property name="toolTip">
+         <string extracomment="Wavelet"/>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">selection-color: rgb(0, 255, 0);</string>
+        </property>
+        <property name="text">
+         <string>Wavelet</string>
+        </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QWidget" name="statusWidget" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
@@ -410,8 +426,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>612</width>
-     <height>22</height>
+     <width>600</width>
+     <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuHelp">
